<resources>
    <string name="app_name">Wordable</string>

    <!-- Main Login Activity -->
    <string name="app_details">Word-Able, Yes we can memorize word easily!</string>
    <string name="hint_username">Input UserName</string>
    <string name="hint_password">Input Password</string>
    <string name="hint_user_top">Username</string>
    <string name="hint_password_top">Password</string>
    <string name="button_login">Login</string>
    <string name="button_join">Not an user? Join us!</string>

    <!-- Main Register View -->
    <string name="button_register">Register!</string>
    <string name="hint_password_check_top">Confirm Password</string>
    <string name="hint_password_check">Enter password again</string>
    <string name="required_field">This field is required!</string>
    <string name="password_length_short">Password length should be more than 8.</string>
    <string name="password_no_special">Password should contains special characters, without whitespace!</string>
    <string name="password_does_not_match">Password does not match!</string>
    <string name="register_duplicated_id"> Username %s already exists!</string>
    <string name="unknown_error">Unknown Error Occurred. Contact developer for more details.</string>
    <string name="register_complete">Register Completed!</string>
    <string name="id_password_mismatch">Username or Password is incorrect!</string>
    <string name="familiar_category">Select category you are not familiar with.</string>
    <string name="default_checkbox">Default Checkbox</string>

    <!-- Navigation View -->
    <string name="main_page">Home</string>
    <string name="search_page">Search</string>
    <string name="learn_page">Learn</string>
    <string name="profile_page">Profile</string>

    <!-- home row -->
    <string name="default_word_view">The WORD</string>
    <string name="default_meaning_view">The meaning blahblahblah</string>
    <string name="default_show_meaning_view">Show meaning</string>

    <!-- Search -->
    <string name="search_view">Search</string>

    <!-- Profile -->
    <string name="edit_credentials">Change Password</string>
    <string name="remove_account">Remove Account</string>
    <string name="hint_password_current">Current Password</string>
    <string name="input_new_password">New Password</string>
    <string name="input_new_password_check">Enter new password again</string>
    <string name="button_ok">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="category_credentials">Credentials</string>
    <string name="category_questions">Question log</string>
    <string name="question_score">Score: %d / %d</string>
    <string name="question_held">Question held on: %s</string>
    <string name="question_type">Type: %s</string>

    <!-- Learn -->
    <string name="question_title_default">Default Question Title</string>
    <string name="question_details_default">Default Question Details</string>
    <string name="go">Go!</string>

    <!-- MCQ -->
    <string name="question_title">%d. What is the meaning of %s?</string>
    <string name="default_choice">choice</string>
    <string name="submit_questions">Submit paper!</string>
    <string name="mcq_result">Your result is: %d out of %d</string>

    <!-- OE -->
    <string name="input_meaning">Input meaning</string>

    <!-- Listening -->
    <string name="listen_title">%d. Listen and check correct words: </string>
    <string name="listen_write_title">%d. Listen and spell the word: </string>
    <string name="input_word">Input word: </string>
</resources>